# FastAPI-Async-Template

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml
src/fastapi_template/: .env  .env.example  alembic.ini  main.py  uvicorn_workers.py
src/fastapi_template/dependencies/: db.py
src/fastapi_template/handlers/: logs.py
src/fastapi_template/migrations/: env.py
src/fastapi_template/migrations/versions/: 2024_01_22_1930-26b4e11ec6ec_.py
src/fastapi_template/models/: __init__.py  base.py
src/fastapi_template/routers/: __init__.py  logs.py
src/fastapi_template/schemas/: logs.py
src/fastapi_template/settings/: environment.py
src/fastapi_template/utils/: logger.py
src/fastapi_vercel_demo/: main.py
tests/integration/: conftest.py  test_logs.py
tests/unit/: conftest.py  test_logs_handler.py
