[tool.poetry]
name = "fastapi_template"
version = "0.1.0"
description = ""
authors = ["NitinN77 <nitinnarayanan77@gmail.com>"]
readme = "README.md"
packages = [{ include = "fastapi_template", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.109.0" }
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
