[tool.poetry]
name = "fastapi_template"
version = "0.1.0"
description = ""
authors = ["NitinN77 <nitinnarayanan77@gmail.com>"]
readme = "README.md"
packages = [
    { include = "fastapi_template", from = "src" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.109.0" }
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest-asyncio = "^0.23.3"
pytest = "^7.4.4"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
